<resources>
    <string name="app_name">Quiz App</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="code_sent_info">We sent you a code. It will be detected automatically but if it is not detected you can put it bellow manually as well.</string>
    <string name="submit">Submit</string>
    <string name="verification_coce">Enter verification code</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="msg_token_fmt">token</string>


    <string name="user_name_text">User name</string>
    <string name="dummy_user">Tarek Hasan</string>
    <string name="edit">Edit</string>
    <string name="dummy_phone">02348034</string>
    <string name="dummy_email">test@gmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="dob">Date of Birth</string>
    <string name="dummy_dob">12/12/12</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload">Upload</string>
    <string name="continue_text">Continue</string>
    <string name="play_and_earn">Play And Earn</string>
    <string name="watch_video">Watch Video</string>
    <string name="affiliate">Affiliate</string>
    <string name="dummy_question">What is Neural Network?</string>
    <string name="option_1">Option 1</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change">Change</string>
    <string name="data_not_found">Data not found</string>
    <string name="total_earned_points">Total Earned Points</string>
    <string name="amount">500000</string>
    <string name="withdraw">Withdraw</string>
    <string name="my_wallet">My Wallet</string>
    <string name="transaction_history">Transaction History</string>
    <string name="bKash">bKash</string>
    <string name="achievment">My Achievement</string>
    <string name="my_quizzes">My Quizzes</string>
    <string name="publish_quiz">Publish Quiz</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="bookmark_quiz">BookMark</string>
    <string name="results">My Results</string>
    <string name="all_quizzes">All Quizzes</string>
    <string name="no_quiz_data_found">No Quiz Data Found</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="total_marks">Total Marks</string>
    <string name="select_category">Select Category</string>
    <string name="time_limit">Time Limit</string>
    <string name="total_no_of_question">Total No. of Question</string>
    <string name="total_questions">Total Questions</string>
    <string name="create">Create</string>
    <string name="creator_name">Creator: Karim</string>
    <string name="time">1:30 hour</string>
    <string name="start_now">Start Now</string>
    <string name="publish_now">Publish Now</string>
    <string name="you_didn_t_create_any_quiz_yet">You did not create any quiz yet.</string>
    <string name="published">published</string>
    <string name="dummy_q_text">who the hell are you?</string>
    <string name="question_title">Question Title</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="select_correct_answer">Select Correct Answer</string>
    <string name="quiz_details">Quiz Details</string>
    <string name="instruction_1">Please do not press the back button after start the quiz. Otherwise you will do not get any marks.</string>
    <string name="instruction">Instructions</string>
    <string name="instruction_2">Answer all of the question. Otherwise you will don\'t get any marks.</string>
    <string name="instruction_3">After selecting a option it will display the answer is correct or not instantly.</string>
    <string name="instruction_4">You have to finish the quiz before the given time.</string>
    <string name="instruction_5">After finishing the time quiz will be finish automatically.</string>
    <string name="total_participator">Total Participator</string>
    <string name="time_left">Time Left</string>
    <string name="your_score">Your Score</string>
    <string name="no_participation">You did\'t participated on any quiz.</string>
    <string name="score_percent">Score(Percent)</string>
    <string name="dashboard">Dashboard</string>
    <string name="no_user_has_participated_yet">No user has participated yet</string>
    <string name="use_quiz_name">Use quiz name</string>
    <string name="or_your_score_is_not_too_good">or your score is not too good to show here.</string>
    <string name="i_accept_the_terms_and_conditions">I accept the terms and conditions.</string>
    <string name="not_registered_yet">Not Registered yet?</string>
    <string name="password">Password</string>
    <string name="sign_out">Logout</string>
    <string name="more_apps">More Apps</string>
    <string name="rate_it">Rate it</string>
    <string name="share">Share</string>
    <string name="total_no_of_questions">Total No. of Questions</string>
    <string name="home">Home</string>
    <string name="add_options">Add Options</string>
    <string name="details">Details</string>
</resources>
