<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
        android:id="@+id/mobile_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:padding="5dp">

            <TextView
                android:id="@+id/quiz_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/quiz_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />



            <TextView
                android:id="@+id/total_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/time"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:drawablePadding="5dp"
                android:background="@drawable/border_orange_back"
                android:paddingRight="15dp"
                android:paddingLeft="10dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/creator_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/creator_name"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_check_green"
            android:drawablePadding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@id/start_quiz_tv"
            android:layout_below="@+id/mobile_layout"
            android:layout_marginLeft="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/total_marks_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/total_marks"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_check_green"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:layout_below="@+id/creator_tv"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/start_quiz_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_now"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_back"
            android:layout_marginTop="5dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>