<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DashBoardActivity"
    android:orientation="vertical">


    <include layout="@layout/app_bar_layout"
        android:id="@+id/dash_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dash_toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/play_quiz_bt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_orange_back"
                android:text="@string/play_and_earn"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/video_bt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_orange_back"
                android:text="@string/watch_video"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/affiliate_bt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_orange_back"
                android:text="@string/affiliate"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>