<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">


    <include layout="@layout/dash_bar_layout"
        android:id="@+id/profile_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_toolbar"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/quiz_background"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white_transparent_light">

                    <TextView
                        android:id="@+id/user_name_title_tv"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_user"
                        android:background="@android:color/white"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_layout"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/edit_photo_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/rounded_border"
                    android:drawableLeft="@drawable/ic_camera_alt_black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:drawablePadding="5dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        >

                        <TextView
                            android:id="@+id/user_name_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_name_text" />

                        <TextView
                            android:id="@+id/edit_name_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="10dp"
                            android:text="Edit"
                            android:textColor="@color/blue"
                            android:textSize="12sp"
                            android:padding="5dp"/>

                        <EditText
                            android:id="@+id/p_user_name_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/user_name_tv"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/border_white_back"
                            android:enabled="false"
                            android:padding="10dp"
                            android:text="@string/dummy_user" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/p_phone_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number" />

                        <EditText
                            android:id="@+id/p_phone_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/p_phone_tv"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/border_white_back"
                            android:enabled="false"
                            android:inputType="none"
                            android:padding="10dp"
                            android:focusable="false"
                            android:text="@string/dummy_phone" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/p_email_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email" />

                        <TextView
                            android:id="@+id/edit_email_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="10dp"
                            android:text="Edit"
                            android:textColor="@color/blue"
                            android:textSize="12sp"
                            android:padding="5dp"/>

                        <EditText
                            android:id="@+id/p_email_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/p_email_tv"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/border_white_back"
                            android:enabled="false"
                            android:inputType="textEmailAddress"
                            android:padding="10dp"
                            android:text="@string/dummy_email" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/p_dob_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dob" />

                        <TextView
                            android:id="@+id/edit_dob_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="10dp"
                            android:text="Edit"
                            android:textColor="@color/blue"
                            android:textSize="12sp"
                            android:padding="5dp"/>

                        <EditText
                            android:id="@+id/pr_dob_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/p_dob_tv"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/border_white_back"
                            android:enabled="false"
                            android:padding="10dp"
                            android:text="@string/dummy_dob" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:id="@+id/update_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/p_update_bt"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:enabled="false"
                        android:text="@string/update"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/p_user_iv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/image_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-71dp"
                android:layout_marginBottom="-100dp"
                android:src="@drawable/user_avater" />

        </RelativeLayout>
    </ScrollView>



</RelativeLayout>