<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_background"
    tools:context=".LoginActivity2">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"/>

    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/app_logo_iv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/app_logo"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="70dp"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/login_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                android:layout_centerInParent="true"
                android:layout_below="@id/app_logo_iv">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_ti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/terms_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="I accept the terms and conditions."
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"/>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/login_bt"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="@string/continue_text"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        style="@style/Base.Widget.AppCompat.Button.Colored"/>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_registered_yet"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"/>

                        <TextView
                            android:id="@+id/register_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="sign Up"
                            android:textSize="18sp"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginLeft="20dp"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>




</RelativeLayout>